vertical alignment fixes

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -48,7 +48,7 @@
 
     .left-menu-popup {
         position: absolute;
-        top: 56px;
+        top: 40px;
         bottom: 0;
         left: 0;
         right: 0;
